@@ -40,7 +40,7 @@ dependencies {
 	runtimeOnly 'org.flywaydb:flyway-database-postgresql'
 
 	//querydsl
-	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
@@ -50,8 +50,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
-	//Swagger
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
 	// Firebase Admin SDK
 	implementation 'com.google.firebase:firebase-admin:9.8.0'
@@ -98,4 +98,6 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	// 테스트 실행 시 JVM 동적 에이전트 로딩(Dynamic Agent Loading) 허용 옵션 적용
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
